# max-bot

./: .gitignore  Cargo.toml  README.md  ci.yml  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20250427051029_init.down.sql  20250427051029_init.up.sql
src/: bot.rs  db.rs  error.rs  main.rs
src/bot/: api.rs  events.rs  mod.rs
src/db/: mod.rs  models.rs
tests/: db.rs
